name:                upcast
version:             0.1.0.0
license-file:        LICENSE
license:             MIT
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014, 2015 Zalora South East Asia Pte Ltd
build-type:          Simple
cabal-version:       >=1.10
data-files:          nix/*.nix
                   , nix/aws/*.nix
                   , nix/lib/*.nix


executable upcast
  main-is:             upcast.hs
  build-depends:       base
                     , containers
                     , directory, filepath
                     , bytestring, text, base64-bytestring
                     , unix, process, time
                     , lifted-base
                     , mtl
                     , async
                     , attoparsec
                     , aeson, unordered-containers, vector, scientific
                     , aeson-pretty
                     , conduit, resourcet
                     , random
                     , pretty-show
                     , conduit-extra
                     , optparse-applicative >= 0.11.0.1
                     , amazonka
                     , amazonka-core
                     , amazonka-ec2 >= 0.3.6.1
                     , amazonka-elb
                     , amazonka-autoscaling
                     , amazonka-route53 >= 0.3.6.1
                     , lens
                     , exceptions
                     , vk-posix-pty >= 0.2.1
                     , semigroups
                     , tagged

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable fgrun
  main-is:             fgrun.hs
  build-depends:       base, unix
                     , bytestring, text
                     , aeson-pretty
                     , aeson, unordered-containers, vector
                     , mtl
                     , conduit
                     , filepath
                     , process
                     , resourcet
                     , time
                     , vk-posix-pty >= 0.2.1
                     , semigroups
                     , directory
                     , random

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
