name:                upcast
version:             0.1.1.0
license-file:        LICENSE
license:             MIT
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014, 2015 Zalora South East Asia Pte Ltd
build-type:          Simple
cabal-version:       >=1.10
data-files:          nix/*.nix
                   , nix/aws/*.nix
                   , nix/lib/*.nix

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  exposed-modules:     Upcast.Deploy
                     , Upcast.Environment
                     , Upcast.IO
                     , Upcast.Infra
                     , Upcast.Infra.Amazonka
                     , Upcast.Infra.Match
                     , Upcast.Infra.NixTypes
                     , Upcast.Infra.Types
                     , Upcast.Install
                     , Upcast.Shell
                     , Upcast.Types

  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , amazonka
                     , amazonka-autoscaling
                     , amazonka-core
                     , amazonka-ec2 >= 0.3.6.1
                     , amazonka-elb
                     , amazonka-route53 >= 0.3.6.1
                     , async
                     , attoparsec
                     , base64-bytestring
                     , bytestring
                     , conduit, resourcet
                     , conduit-extra
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , lens
                     , lifted-base
                     , mtl
                     , optparse-applicative >= 0.11.0.1
                     , pretty-show
                     , process
                     , random
                     , scientific
                     , semigroups
                     , tagged
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
                     , vk-posix-pty >= 0.2.1


executable upcast
  main-is:             upcast.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , amazonka
                     , amazonka-autoscaling
                     , amazonka-core
                     , amazonka-ec2 >= 0.3.6.1
                     , amazonka-elb
                     , amazonka-route53 >= 0.3.6.1
                     , async
                     , attoparsec
                     , base64-bytestring
                     , bytestring
                     , conduit, resourcet
                     , conduit-extra
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , lens
                     , lifted-base
                     , mtl
                     , natural-sort
                     , optparse-applicative >= 0.11.0.1
                     , pretty-show
                     , process
                     , random
                     , scientific
                     , semigroups
                     , tagged
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
                     , vk-posix-pty >= 0.2.1

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable fgrun
  main-is:             fgrun.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , conduit
                     , directory
                     , filepath
                     , mtl
                     , pretty-show
                     , process
                     , random
                     , resourcet
                     , semigroups
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
                     , vk-posix-pty >= 0.2.1

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
