name:           upcast
version:        0.1.1.0
license-file:   LICENSE
license:        MIT
author:         Vladimir Kirillov
maintainer:     vlad.ki@zalora.com
copyright:      2014, 2015, 2016 Zalora South East Asia Pte Ltd
build-type:     Simple
cabal-version:  >= 1.10
synopsis:       Nix-based Linux deployment platform tools
description:    Nix-based Linux deployment platform tools
category:       Automation
homepage:       https://github.com/zalora/upcast#readme
bug-reports:    https://github.com/zalora/upcast/issues

data-files:
    nix/aws/common.nix
    nix/aws/ebs-volume.nix
    nix/aws/ec2-instance.nix
    nix/aws/ec2-keypair.nix
    nix/aws/ec2-sg.nix
    nix/aws/ec2-subnet.nix
    nix/aws/ec2-vpc.nix
    nix/aws/elb.nix
    nix/eval-infra.nix
    nix/extralib.nix
    nix/infra-base.nix
    nix/infra-types.nix
    nix/inspect-types.nix
    nix/lib/attrsets.nix
    nix/lib/debug.nix
    nix/lib/default.nix
    nix/lib/lists.nix
    nix/lib/meta.nix
    nix/lib/misc.nix
    nix/lib/modules.nix
    nix/lib/options.nix
    nix/lib/strings.nix
    nix/lib/trivial.nix
    nix/lib/types.nix
    nix/option-types.nix

source-repository head
  type: git
  location: https://github.com/zalora/upcast

library
  hs-source-dirs:
      lib
  default-extensions: OverloadedStrings
  build-depends:
      base < 5
    , aeson
    , aeson-pretty
    , amazonka >= 1.3
    , amazonka-core >= 1.3
    , amazonka-cloudwatch >= 1.3
    , amazonka-ec2 >= 1.3
    , amazonka-elb >= 1.3
    , amazonka-route53 >= 1.3
    , array
    , async
    , attoparsec
    , base64-bytestring
    , bifunctors
    , bytestring
    , conduit
    , resourcet
    , conduit-extra
    , containers
    , directory
    , exceptions
    , filepath
    , hashable
    , iproute
    , lens
    , lens-action
    , lens-aeson
    , lifted-base
    , mtl
    , natural-sort
    , pretty-show
    , process
    , random
    , resourcet
    , scientific
    , semigroups
    , tagged
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , vk-posix-pty >= 0.2.1
    , witherable
  exposed-modules:
      Infracast
      Infracast.Amazonka
      Infracast.Graph
      Infracast.Input
      Infracast.Machine
      Infracast.NixTypes
      Infracast.Resource
      Infracast.Resources.EBS
      Infracast.Resources.ELB
      Infracast.Resources.Instance
      Infracast.Resources.Keypair
      Infracast.Resources.SecurityGroup
      Infracast.Resources.Subnet
      Infracast.Resources.VPC
      Infracast.Types
      Upcast.Install
      Upcast.Environment
      Upcast.Monad
      Upcast.IO
      Upcast.Deploy
      Upcast.Shell
      Upcast.Shell.Run
      Upcast.Shell.Temp
      Upcast.Shell.Types
      Upcast.Types
  other-modules:
      Paths_upcast
  default-language: Haskell2010

executable upcast
  main-is: upcast.hs
  hs-source-dirs:
      cmd
  default-extensions: OverloadedStrings
  build-depends:
      upcast
    , base < 5
    , optparse-applicative >= 0.11.0.1
  other-modules:
      Paths_upcast
  default-language: Haskell2010
